@startuml

title __VIEW's Class Diagram__\n

  namespace com.itbird {
    namespace view {
      class com.itbird.view.CircleImageView {
          {static} - DEFAULT_BOARD_COLOR : int
          {static} - DEFAULT_BORAD_WIDTH : int
          - TAG : String
          - mBitmap : Bitmap
          - mBitmapHeight : int
          - mBitmapShader : BitmapShader
          - mBitmapWidth : int
          - mBoardColor : int
          - mBoardPoint : Paint
          - mBoardRadius : float
          - mBoradWidth : int
          - mContentPaint : Paint
          - mContentRadius : float
          + CircleImageView()
          + CircleImageView()
          + CircleImageView()
          # onDraw()
          # onMeasure()
          - drawBitmap()
          - getBitmapFromDrawable()
          - init()
          - updateShaderMatrix()
      }
    }
  }
  

  namespace com.itbird {
    namespace view {
      class com.itbird.view.FlowLayout {
          - itemSpacing : int
          - lineSpacing : int
          - rowCount : int
          - singleLine : boolean
          + FlowLayout()
          + FlowLayout()
          + FlowLayout()
          + FlowLayout()
          + getRowIndex()
          + isSingleLine()
          + setSingleLine()
          # getItemSpacing()
          # getLineSpacing()
          # getRowCount()
          # onLayout()
          # onMeasure()
          # setItemSpacing()
          # setLineSpacing()
          {static} - getMeasuredDimension()
          - loadFromAttributes()
      }
    }
  }
  

  namespace com.itbird {
    namespace view {
      class com.itbird.view.RoundIRect {
          ~ mBackColor : int
          ~ mPaint : Paint
          + RoundIRect()
          + RoundIRect()
          + RoundIRect()
          # onDraw()
          # onMeasure()
      }
    }
  }
  

  namespace com.itbird {
    namespace view {
      class com.itbird.view.ViewTestActivity {
          {static} - TAG : String
          # onCreate()
          # onDestroy()
          # onNewIntent()
      }
    }
  }
  

  com.itbird.view.CircleImageView -up-|> androidx.appcompat.widget.AppCompatImageView
  com.itbird.view.FlowLayout -up-|> android.view.ViewGroup
  com.itbird.view.RoundIRect -up-|> android.view.View
  com.itbird.view.ViewTestActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
